Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49099

WebUI popups should be closed with their originating WebEngineView

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.0 RC
    • 5.6.0 Alpha
    • WebEngine
    • None
    • Ubuntu 14.04, Gnome 3

      Steps to reproduce the bug:
      1.) Open quicknanobrowser
      2.) Navigate to http://www.w3schools.com/tags/tryit.asp?filename=tryhtml_select
      3.) Click on the <select> input
      4.) Close browser window

      The application is running and the dropdown list is still there.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davidsz Szabolcs David
            davidsz Szabolcs David
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes